--- a/Assets/snake.yml
+++ b/Assets/snake.yml
@@ -23,7 +23,7 @@ jobs:
         uses: Platane/snk@v3
         with:
           # GitHub username to generate the animation for
-          github_user_name: JenniGabriely01
+          github_user_name: oandredev
           # Define the output files and their configurations
           outputs: |
             dist/github-snake.svg
