--- a/.github/workflow/snake.yml
+++ b/.github/workflow/snake.yml
@@ -1,42 +1,38 @@
 name: GitHub Snake Game
 
 on:
-  # Schedule the workflow to run daily at midnight UTC
+  # Agenda para rodar todo dia à meia-noite (UTC)
   schedule:
     - cron: "0 0 * * *"
-  # Allow manual triggering of the workflow
+  # Permite executar manualmente
   workflow_dispatch:
-  # Trigger the workflow on pushes to the main branch
-  push:
-    branches:
-      - main
+
 jobs:
   generate:
     runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
-      # Step 1: Checkout the repository
-      - name: Checkout Repository
+      # Etapa 1 – Clona o repositório
+      - name: Checkout repository
         uses: actions/checkout@v3
-      # Step 2: Generate the snake animations
+
+      # Etapa 2 – Gera os arquivos .svg e .gif da snake
       - name: Generate GitHub Contributions Snake Animations
         uses: Platane/snk@v3
         with:
-          # GitHub username to generate the animation for
           github_user_name: oandredev
-          # Define the output files and their configurations
           outputs: |
             dist/github-snake.svg
             dist/github-snake-dark.svg?palette=github-dark
             dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      # Step 3: Deploy the generated files to the 'output' branch
-      - name: Deploy to Output Branch
+
+      # Etapa 3 – Faz deploy para o branch `output`
+      - name: Deploy to GitHub Pages (output branch)
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
           publish_branch: output
-          # Optionally, you can set a custom commit message
-          commit_message: "Update snake animation [skip ci]"
+          commit_message: "update snake animation [skip ci]"
