--- a/.github/workflows/fetch-stats.yml
+++ b/.github/workflows/fetch-stats.yml
@@ -1,4 +1,4 @@
-name: Fetch GitHub Stats Images (Failproof to Output Branch)
+name: Save Stats to Output Branch
 
 on:
   schedule:
@@ -6,53 +6,42 @@ on:
   workflow_dispatch:
 
 jobs:
-  download:
+  save:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-
     steps:
-      - name: Checkout output branch
+      - name: Checkout repo
         uses: actions/checkout@v4
         with:
-          ref: output
+          fetch-depth: 0
 
-      - name: Create assets folder
-        run: mkdir -p assets
-
-      - name: Download stats card
-        id: stats
+      - name: Baixar stats
+        id: download
         continue-on-error: true
         run: |
-          curl -s -o assets/stats_new.svg "https://github-readme-stats-git-masterrstaa-rickstaa.vercel.app/api?username=oandredev&hide_title=true&show_icons=true&include_all_commits=true&count_private=true&theme=algolia&hide_border=false"
+          mkdir -p dist
+          curl -f -L "https://github-readme-stats.vercel.app/api?username=oandredev&hide_title=true&show_icons=true&include_all_commits=true&count_private=true&theme=algolia&hide_border=false" -o dist/github-stats.svg
+          curl -f -L "https://github-readme-stats.vercel.app/api/top-langs?username=oandredev&layout=compact&langs_count=10&theme=algolia&hide_border=false" -o dist/top-langs.svg
 
-      - name: Validate stats_new.svg
+      - name: Verificar se gerou corretamente
+        id: check
         run: |
-          if grep -qi "Error" assets/stats_new.svg; then
-            echo "Stats download failed, keeping old file"
-            rm assets/stats_new.svg
+          if [ ! -s "dist/github-stats.svg" ] || [ ! -s "dist/top-langs.svg" ]; then
+            echo "ok=false" >> $GITHUB_OUTPUT
           else
-            mv assets/stats_new.svg assets/stats.svg
+            echo "ok=true" >> $GITHUB_OUTPUT
           fi
 
-      - name: Download top-langs card
-        id: langs
-        continue-on-error: true
+      - name: Salvar no branch output (somente se OK)
+        if: steps.check.outputs.ok == 'true'
         run: |
-          curl -s -o assets/langs_new.svg "https://github-readme-stats-git-masterrstaa-rickstaa.vercel.app/api/top-langs?username=oandredev&layout=compact&langs_count=10&theme=algolia&hide_border=false"
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
 
-      - name: Validate langs_new.svg
-        run: |
-          if grep -qi "Error" assets/langs_new.svg; then
-            echo "Langs download failed, keeping old file"
-            rm assets/langs_new.svg
-          else
-            mv assets/langs_new.svg assets/langs.svg
-          fi
+          git checkout output 2>/dev/null || git checkout -b output
 
-      - name: Commit updated images to output branch
-        uses: stefanzweifel/git-auto-commit-action@v5
-        with:
-          commit_message: "Update cached GitHub stats images"
-          branch: output
-          file_pattern: assets/*.svg
+          cp dist/github-stats.svg .
+          cp dist/top-langs.svg .
+
+          git add github-stats.svg top-langs.svg
+          git commit -m "Update stats (ok)" || echo "Nada para commitar"
+          git push origin output
